error_log.txt
Traceback (most recent call last):
  File "/home/ubuntu/catkin_ws/src/unitree_go1_osc/src/osc_control.py", line 8, in <module>
    from pythonosc import dispatcher, osc_server
  File "/home/ubuntu/.local/lib/python2.7/site-packages/pythonosc/dispatcher.py", line 21
    def __init__(self, _callback: Callable, _args: Union[Any, List[Any]],
                                ^
SyntaxError: invalid syntax

